# snnib

./: .gitignore  README.md  Snnib1.blend  Snnib1.blend1  __init__.py  blend_snn.py  dev.py  geo_nodes.py  logo.blend  network.py  opreators.py  panels.py  properties.py  publish.sh  pyproject.toml  readthedocs.yaml  snnib.blend  snnib.blend1  temp_snnib.pur
data/: brian2_medium.json  brian2_small.json  brian2_tiny.json  custom_net.json  schema.json  simulate_brian2.py
docs/: conf.py  index.md
docs/_static/: custom.css
docs/pages/: api_reference_blender.md  api_reference_blender_utils.md  api_reference_python.md  api_reference_python_simulations.md  faq.md  tutorials.md
renders/: SnnibBrian2Tiny0001-0120.mkv  SnnibDemo0001-0120.mkv
src/snnib/: __init__.py  brian2_utils.py  geo_nodes.py  io.py  network.py  opreators.py  panels.py  properties.py  scaling.py  shader_nodes.py  spiketrain.py
src/snnib/blender/: __init__.py  geo_nodes.py  network.py  operators.py  opreators.py  panels.py  properties.py  shader_nodes.py  spiketrain.py
src/snnib/blender/utils/: __init__.py  collection_utils.py  geo_nodes_utils.py  mesh_utils.py  random.py  scaling.py
src/snnib/commands/: simulate_brian2.py
src/snnib/simulations/: __init__.py  brian2_simulation.py
src/snnib/utils/: __init__.py  geo_nodes_utils.py  mesh_utils.py  random.py
test/: brian2_utils_test.py  io_test.py  routines.py
test/data/: test_snnib1.json  test_snnib2.json
tutorials/: brian2_utils_tutorial.ipynb  designing_networks_tutorial.ipynb  io_tutorial.ipynb
utils/: __init__.py  collection_utils.py  geo_nodes_utils.py  mesh_utils.py
