[project]
name = "snnib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "lukas.steinwender99@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "brian2>=2.9.0",
    "nbformat>=5.10.4",
    "numpy>=1.0,<2.0",
    "plotly>=6.6.0",
    "pytest>=9.0.2",
]

[project.scripts]
brian2_sim = "snnib:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]